| DOCS ADD UPDATE
- Первое и самое главное. Была написана первая документация. Возможно не чёткая, грязная и непонятная. Задачей будет сделать её удобной
- Собственный README!
- Аддоны ElevenLabs и CharacterAI теперь отлавливают момент, когда модуль не был полностью проинициализирован
- Menu lib: Получил поддержку colors

--- a/configs/lang/en.yml
+++ b/configs/lang/en.yml
@@ -16,6 +16,8 @@ interfaces_settings:
 
 addon_settings:
   main_menu_selector: "Select a menu item"
+  addon_download: "Write addon repository link: "
+
 
 lang_selectors:
   file: "Change file: "
