--- a/configs/lang/ru.yml
+++ b/configs/lang/ru.yml
@@ -17,6 +17,7 @@ interfaces_settings:
 
 addon_settings:
   main_menu_selector: "Выберете пункт меню"
+  addon_download: "Вставьте ссылку на репозиторий аддона: "
 
 
 lang_selectors:
