--- a/docs/en/1.Components.MD
+++ b/docs/en/1.Components.MD
@@ -156,15 +156,17 @@ def load_addon() -> AddonExemple:
 ```
 
 # Menu
-
-> *TO DO: Generic compositor, not window rendering by the menu module. If you have overridden the `Menu.start` menu method.
+> [!WARNING]  
+> TO DO: Generic compositor, not window rendering by the menu module. If you have overridden the `Menu.start` menu method.
 It's worth considering, on the seamlessness of the update*
+
+ 
 
 SOW Core - also has a framework, so that you can add your own menu.
 
 ## How to create menu
 
-To create your own menu, you should place it in the addon class and inherit from the main menu class in the**`gulysh_lib.menu_lib.Menu`**
+To create your own menu, you should place it in the addon class and inherit from the main menu class in the **`gulysh_lib.menu_lib.Menu`**
 
 ```py
 
@@ -235,7 +237,7 @@ class Addon_Menu(Menu):
 
 To add your item to the menu, you just need to call `self.add_field("SIGNATURE TITLE", SIGNATURE)` passing the title to the menu and the value returned when selected by the selector
 
-`@self.add_fieldFunc("SIGNIFICANCE STATEMENT")` декоротатор, который позволяет вам добавлять в меню свои функции (Которые, также, могут вызывать другие меню)
+`@self.add_fieldFunc("SIGNIFICANCE STATEMENT")` a decorator that allows you to add your own functions to the menu (Which can also call up other menus).
 
 ```py
 
@@ -259,7 +261,7 @@ To work with configuration files yaml, also created a separate class menu settin
 
 This is just a modified Menu class. Creating and Adding it will be similar. 
 
-It is inherited from the Menu class. Its initialization and working with it is similar to the Menu class**But it takes your config and addon object to reload**
+It is inherited from the Menu class. Its initialization and working with it is similar to the Menu class **But it takes your config and addon object to reload**
 
 ```py
 class Addon_Class(AddonTemplate):
