--- a/docs/ru/1.Components.MD
+++ b/docs/ru/1.Components.MD
@@ -161,7 +161,7 @@ def load_addon() -> AddonExemple:
 
 # Меню
 
-> *TO DO: Общий композитор, а не отрисовка окна модулем меню. Если вы переопределяли метод меню `Menu.start`.
+> [!WARNING] *TO DO: Общий композитор, а не отрисовка окна модулем меню. Если вы переопределяли метод меню `Menu.start`.
 Cтоит подумать, над бесшовностью обновления*
 
 SOW Core - также обладает фреймворком, для того, чтобы можно было добавить свои меню
@@ -209,7 +209,8 @@ class Addon_Class(AddonTemplate):
 
 По умолчанию меню вызывается функцией start, которая вызывает селектор и вызывает функции находящиеся в коллекции menu_fields (Поля меню) 
 
-> *!!! Предупреждение, если вы решите переопределить этот метод, то можете попасть под условия рефакторинга описанными в TO DO*
+ > [!WARNING] 
+ > Предупреждение, если вы решите переопределить этот метод, то можете попасть под условия рефакторинга описанными в TO DO*
 
 ```py
 class Addon_Menu(Menu):
@@ -259,7 +260,7 @@ def init_fields():
 Для работы с конфигурационными файлами yaml, также был создан отдельный класс меню настроек  `gulysh_lib.menu_lib.Settings_Menu`.  Который принимает конфиг с которым работает и объект аддона для его перезагрузки 
 
 
-> !!! На данный момент, есть возможность обрабатывать конфиг с двойной вложенностью и только с ней. Имейте ввиду, когда планируете свой конфиг.
+На данный момент, есть возможность обрабатывать конфиг с двойной вложенностью и только с ней. Имейте ввиду, когда планируете свой конфиг.
 
 > Если вам понадобиться обрабатывать любую другую вложенность, то придётся переопределить методы `get_conf_path`,  `add_settings_point`, `add_settings_write_point` 
 
