--- a/docs/ru/1.Components.MD
+++ b/docs/ru/1.Components.MD
@@ -161,7 +161,8 @@ def load_addon() -> AddonExemple:
 
 # Меню
 
-> [!WARNING] *TO DO: Общий композитор, а не отрисовка окна модулем меню. Если вы переопределяли метод меню `Menu.start`.
+> [!WARNING] 
+> *TO DO: Общий композитор, а не отрисовка окна модулем меню. Если вы переопределяли метод меню `Menu.start`.
 Cтоит подумать, над бесшовностью обновления*
 
 SOW Core - также обладает фреймворком, для того, чтобы можно было добавить свои меню
