--- a/docs/en/1.Components.MD
+++ b/docs/en/1.Components.MD
@@ -204,7 +204,8 @@ Used to call functions within collections, call other menus, used in the **`Sett
 
 By default, the menu is called by the start function, which calls the selector and calls the functions in the menu_fields collection.
 
-*!!! Warning, if you decide to override this method, you may be subject to refactoring conditions described in TO DO*
+>[!WARNING]  
+> Warning, if you decide to override this method, you may be subject to refactoring conditions described in TO DO*
 
 ```py
 class Addon_Menu(Menu):
