| DOCS ADD UPDATE
- Первое и самое главное. Была написана первая документация. Возможно не чёткая, грязная и непонятная. Задачей будет сделать её удобной
- Собственный README!
- Аддоны ElevenLabs и CharacterAI теперь отлавливают момент, когда модуль не был полностью проинициализирован
- Menu lib: Получил поддержку colors

> WARNING!
> На данный момент не работает TLS-Connect библиотека из-за чего посыпался модуль CharacterAI

--- a/docs/en/1.Components.MD
+++ b/docs/en/1.Components.MD
@@ -253,7 +253,8 @@ def init_fields():
 
 To work with configuration files yaml, also created a separate class menu settings `gulysh_lib.menu_lib.Settings_Menu`.  Which accepts the config with which it works and the addon object to reload it
 
-> !!! At the moment, it is possible to handle a config with double nesting and only with it. Keep it in mind when you plan your config.
+> [!NOTE]
+> At the moment, it is possible to handle a config with double nesting and only with it. Keep it in mind when you plan your config.
 > If you need to handle any other nesting, you will have to override the `get_conf_path`, `add_settings_point`, `add_settings_write_point` methods
 
 *(The author doesn't know how to try to handle dynamic nesting, everything is nailed down here;-;)*.
