--- a/docs/ru/1.Components.MD
+++ b/docs/ru/1.Components.MD
@@ -263,6 +263,7 @@ def init_fields():
 
 На данный момент, есть возможность обрабатывать конфиг с двойной вложенностью и только с ней. Имейте ввиду, когда планируете свой конфиг.
 
+> [!NOTE]
 > Если вам понадобиться обрабатывать любую другую вложенность, то придётся переопределить методы `get_conf_path`,  `add_settings_point`, `add_settings_write_point` 
 
 *(Автор не знает, как можно попробовать обрабатывать динамическое колличество вложенностей, здесь прибито всё гвоздями;-;)*
